Changed naming convention for getters and setters and changed URI to IRI